--- a/Assets/Documents/app.scss
+++ b/Assets/Documents/app.scss
@@ -522,7 +522,7 @@ header {
 }
 // hover 
 .btn-ii button:hover{
-  background: #3a9e1e;
+  background: #42af24;
 }
 // container iv bottom start 
 .cntnr-iv-iii{
