--- a/Assets/Documents/app.css
+++ b/Assets/Documents/app.css
@@ -194,9 +194,10 @@ header {
 }
 
 .conainer-i-rght img {
-  width: 300px;
+  width: 500px;
   height: 300px;
   margin-top: 150px;
+  border-radius: 50%;
 }
 
 .cntnr-i-round img {
