--- a/Assets/Documents/app.scss
+++ b/Assets/Documents/app.scss
@@ -22,7 +22,7 @@ a {
   justify-content: center;
   align-items: center;
 }
-@mixin ul{
+@mixin ul {
   display: flex;
   list-style: none;
   gap: 10px;
@@ -66,10 +66,10 @@ a {
   padding-right: 40px;
   cursor: pointer;
 }
-// hover used 
-.right-fst:hover{
+// hover used
+.right-fst:hover {
   background: #a50f0f;
-  color: #083B2B;
+  color: #083b2b;
   border-radius: 50%;
 }
 .right-snd ul {
@@ -77,7 +77,7 @@ a {
   list-style: none;
   gap: 10px;
 }
-.right-snd ul li:hover{
+.right-snd ul li:hover {
   background: #a50f0f;
   border-radius: 50%;
   height: 20px;
@@ -92,10 +92,11 @@ header {
 }
 .left-logo img {
   padding-left: 100px;
+  height: 30px;
   margin-top: 15px;
 }
 // header middle start part
-.middle ul{
+.middle ul {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 15px;
   font-weight: 500;
@@ -105,7 +106,7 @@ header {
   gap: 20px;
   cursor: pointer;
 }
-.middle li:hover{
+.middle li:hover {
   color: #fff;
   background: #3a9e1e;
 }
@@ -130,9 +131,9 @@ header {
   margin-bottom: 10px;
   cursor: pointer;
 }
-// hover used here 
-.right-iii button:hover{
-  background:#a50f0f;
+// hover used here
+.right-iii button:hover {
+  background: #a50f0f;
 }
 .right-ii img {
   height: 30px;
@@ -183,8 +184,8 @@ header {
   margin-top: 30px;
   cursor: pointer;
 }
-// hover used 
-.left-content-iv button:hover{
+// hover used
+.left-content-iv button:hover {
   background: #a50f0f;
 }
 .left-content-iv {
@@ -267,8 +268,8 @@ header {
   @include bucket;
   left: 180px;
 }
-// hover 
-.bucket > img:hover{
+// hover
+.bucket > img:hover {
   width: 340px;
   height: 340px;
   transition: all 0.52;
@@ -287,8 +288,8 @@ header {
   @include bucket;
   left: 550px;
 }
-// hover 
-.bucket2 > img:hover{
+// hover
+.bucket2 > img:hover {
   width: 340px;
   height: 340px;
   transition: all 0.52;
@@ -301,8 +302,8 @@ header {
   @include bucket;
   left: 900px;
 }
-// hover used here 
-.bucket3 > img:hover{
+// hover used here
+.bucket3 > img:hover {
   width: 340px;
   height: 340px;
   transition: all 0.52;
@@ -401,8 +402,8 @@ header {
   color: #fff;
   cursor: pointer;
 }
-// hover 
-.cntnr-ii-lft-v button:hover{
+// hover
+.cntnr-ii-lft-v button:hover {
   background: #a50f0f;
 }
 .cntnr-ii-lft-v {
@@ -429,78 +430,78 @@ header {
   top: 190px;
   left: 60px;
 }
-.cntnr-right-img-iii img{
-    border: 10px solid #fff;
-    border-radius: 5px;
-    height: 150px;
-    position: absolute;
-    top: 50px;
-    left: 110px;  
+.cntnr-right-img-iii img {
+  border: 10px solid #fff;
+  border-radius: 5px;
+  height: 150px;
+  position: absolute;
+  top: 50px;
+  left: 110px;
 }
 // container-ii right side ends
 // ii-container ends
-// container iii start 
-.container-iii{
+// container iii start
+.container-iii {
   height: 800px;
   width: 100vw;
   background-image: url(./Picture/cntnr-iii-bg.png);
-  display:  flex;
+  display: flex;
   align-items: center;
   flex-direction: column;
 }
-.cntnr-iii-cntnt{
+.cntnr-iii-cntnt {
   margin-top: 100px;
 }
-.cntnr-iii-i{
+.cntnr-iii-i {
   color: #3a9e1e;
-  font-weight:600;
+  font-weight: 600;
   line-height: 70px;
   padding-left: 50%;
 }
-.cntnr-iii-ii{
+.cntnr-iii-ii {
   font-size: 40px;
   font-weight: 700;
   padding-left: 35%;
 }
-.cntnr-iii-iii{
+.cntnr-iii-iii {
   display: flex;
 }
-.cntnr-iii-iii img{
+.cntnr-iii-iii img {
   height: 400px;
 }
-// hover 
-.cntnr-iii-iii img:hover{
+// hover
+.cntnr-iii-iii img:hover {
   height: 440px;
 }
-// container-iii ends 
-// container-iv starts here 
-.container-iv{
+// container-iii ends
+// container-iv starts here
+.container-iv {
   height: 800px;
   width: 100vw;
   background-image: url(./Picture/cntnr-iv-bg.png);
   border-radius: 0 0 30% 30%;
 }
-.container-iv{
+.container-iv {
   @include flex;
   flex-direction: column;
   position: relative;
 }
-.cntnr-iv-i{
+.cntnr-iv-i {
   color: #fff;
   font-size: 40px;
 }
-.cntnr-iv-i span{
+.cntnr-iv-i span {
   padding-left: 200px;
 }
-.cntnr-iv-i p{
+.cntnr-iv-i p {
   padding-left: 80px;
 }
-.cntnr-iv-ii{
+.cntnr-iv-ii {
   display: flex;
   gap: 20px;
   margin-top: 40px;
 }
-.btn-i button{
+.btn-i button {
   height: 40px;
   width: 130px;
   background: #3a9e1e;
@@ -508,109 +509,109 @@ header {
   border: none;
   border-radius: 5px;
 }
-// hover 
-.btn-i button:hover{
+// hover
+.btn-i button:hover {
   background: #a50f0f;
 }
-.btn-ii button{
+.btn-ii button {
   height: 40px;
   width: 130px;
   color: #fff;
-  background: #083B2B;
-  border:3px solid #fff;
+  background: #083b2b;
+  border: 3px solid #fff;
   border-radius: 5px;
 }
-// hover 
-.btn-ii button:hover{
+// hover
+.btn-ii button:hover {
   background: #42af24;
 }
-// container iv bottom start 
-.cntnr-iv-iii{
+// container iv bottom start
+.cntnr-iv-iii {
   position: absolute;
   height: 300px;
   width: 70%;
-  background: #60B04A;
+  background: #60b04a;
   border-radius: 10px;
-top:600px
+  top: 600px;
 }
-.cntnr-iv-iii{
+.cntnr-iv-iii {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-.iv-lft-i{
+.iv-lft-i {
   color: #fff;
   font-weight: 600;
   line-height: 60px;
 }
-.iv-lft-ii{
+.iv-lft-ii {
   font-size: 30px;
   font-weight: 800;
   color: #fff;
 }
-.cntnr-iv-rght{
+.cntnr-iv-rght {
   display: flex;
   color: #fff;
   gap: 70px;
   font-size: 20px;
 }
-// container iv bottom ends 
-// container-iv ends here 
-// containeer-v start 
-.container-v{
+// container iv bottom ends
+// container-iv ends here
+// containeer-v start
+.container-v {
   height: 1500px;
   width: 100vw;
- background-image: url(./Picture/white-background-free-vector.webp);
+  background-image: url(./Picture/white-background-free-vector.webp);
   border-radius: 0 0 30% 30%;
 }
-.v-img-glry img{
+.v-img-glry img {
   height: 250px;
   width: 350px;
   margin-top: 300px;
   padding-left: 70px;
 }
-.v-img-glry{
+.v-img-glry {
   @include flex;
 }
-// container v bottom 
-.cntnr-v-ii{
+// container v bottom
+.cntnr-v-ii {
   @include flex;
   flex-direction: column;
   margin-top: 200px;
 }
-.v-ii-i{
-  color: #60B04A;
+.v-ii-i {
+  color: #60b04a;
   line-height: 30px;
 }
-.v-ii-ii{
+.v-ii-ii {
   font-size: 40px;
   font-weight: 600;
   margin-top: 20px;
 }
-.v-ii-ii span{
+.v-ii-ii span {
   padding-left: 150px;
 }
-// image section starts 
-.v-ii-iii{
-display: flex;
-padding-left: 200px;
-padding-right: 200px;
-margin-top: 70px;
+// image section starts
+.v-ii-iii {
+  display: flex;
+  padding-left: 200px;
+  padding-right: 200px;
+  margin-top: 70px;
 }
-.v-ii-iii img{
+.v-ii-iii img {
   height: 200px;
   width: 250px;
 }
-.v-txt-ii{
+.v-txt-ii {
   font-size: 20px;
   font-weight: 700;
   margin-top: 20px;
   margin-bottom: 10px;
 }
-// image ssection ends 
-// container v ends here 
-// container vi starts 
-.container-vi{
+// image ssection ends
+// container v ends here
+// container vi starts
+.container-vi {
   position: relative;
   margin-top: 200px;
   height: 450px;
@@ -618,161 +619,160 @@ margin-top: 70px;
   background-image: url(./Picture/vi-bg.png);
   overflow: hidden;
 }
-.vi-text{
-  
+.vi-text {
   @include flex;
   font-size: 30px;
   font-weight: 700;
 }
-.vi-text p{
+.vi-text p {
   padding-left: 30px;
 }
-.vi-text span{
+.vi-text span {
   margin-top: 100px;
 }
-.vi-inpt{
+.vi-inpt {
   @include flex;
   margin-top: 50px;
 }
-.vi-btn input{
+.vi-btn input {
   height: 40px;
   width: 400px;
   border: none;
   border-radius: 5px;
 }
-.vi-btn ::placeholder{
+.vi-btn ::placeholder {
   padding-left: 20px;
   color: black;
   font-weight: 700;
 }
-.vi-btn input[type=text]{
+.vi-btn input[type="text"] {
   padding-left: 20px;
 }
-.vi-btn button{
+.vi-btn button {
   height: 40px;
-width: 120px;
-background: #3a9e1e;
-border: none;
-border-radius: 5px;
-color: #fff;
-font-weight: 600;
+  width: 120px;
+  background: #3a9e1e;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: 600;
 }
-// hover 
-.vi-btn button:hover{
+// hover
+.vi-btn button:hover {
   background: #a50f0f;
 }
-.vi-doted-img-ii{
+.vi-doted-img-ii {
   position: absolute;
   top: -40px;
   left: 80%;
 }
-.vi-doted-img-ii img{
+.vi-doted-img-ii img {
   height: 150px;
 }
-.vi-doted-img-i img{
+.vi-doted-img-i img {
   height: 150px;
 }
 .vi-doted-img-i {
   position: absolute;
   top: 75%;
 }
-// container vi ends 
-// container vii starts here 
-.container-vii{
-height: 400px;
-width: 100vw;
-background-image: url(./Picture/vii-bg.png);
-display:  flex;
-flex-direction: column;
-justify-content: space-around;
-align-items: center;
+// container vi ends
+// container vii starts here
+.container-vii {
+  height: 400px;
+  width: 100vw;
+  background-image: url(./Picture/vii-bg.png);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
-// copyright section start 
-.vii-ii{
+// copyright section start
+.vii-ii {
   color: #fff;
   margin-bottom: 10px;
   font-size: 14px;
 }
 // copyright section ends
-.vii-i{
+.vii-i {
   display: flex;
   gap: 100px;
   color: #fff;
   margin-top: 50px;
   font-size: 14px;
 }
-.vii-clmn-txt-ii{
+.vii-clmn-txt-ii {
   margin-top: 20px;
   font-size: 14px;
 }
-.vii-clmn-txt-i{
+.vii-clmn-txt-i {
   margin-top: 40px;
 }
-// column i  ends 
-.vii-clmn-ii-i{
+// column i  ends
+.vii-clmn-ii-i {
   font-size: 20px;
   font-weight: 600;
   margin-bottom: 10px;
 }
-.vii-clmn-ii-ii{
+.vii-clmn-ii-ii {
   margin-top: 20px;
 }
-.vii-clmn-ii-ii li{
+.vii-clmn-ii-ii li {
   line-height: 30px;
   list-style: none;
 }
-// column iii start 
-.vii-clmn-iii-ttl{
+// column iii start
+.vii-clmn-iii-ttl {
   font-size: 20px;
   font-weight: 600;
   margin-bottom: 10px;
 }
-.vii-clmn-iii-ii{
+.vii-clmn-iii-ii {
   margin-bottom: 20px;
   margin-top: 30px;
   font-size: 14px;
 }
-// column iv start 
-.vii-clmn-iv-s-mdia{
+// column iv start
+.vii-clmn-iv-s-mdia {
   display: flex;
   gap: 20px;
   margin-top: 20px;
 }
-.fb{
+.fb {
   height: 30px;
   width: 30px;
   border-radius: 50%;
   background: #a1c597;
   @include flex;
 }
-.ttr{
+.ttr {
   height: 30px;
   width: 30px;
   border-radius: 50%;
   background: #1c8200;
   @include flex;
 }
-.insta{
+.insta {
   height: 30px;
   width: 30px;
   border-radius: 50%;
   background: #1c8200;
   @include flex;
 }
-.lknd{
+.lknd {
   height: 30px;
   width: 30px;
   border-radius: 50%;
   background: #1c8200;
   @include flex;
 }
-.vii-clmn-iv-ttl{
+.vii-clmn-iv-ttl {
   font-size: 20px;
   font-weight: 600;
   margin-bottom: 30px;
 }
-.vii-clmn-iv-ii span{
+.vii-clmn-iv-ii span {
   line-height: 30px;
   font-size: 14px;
 }
-// container vii endss here 
+// container vii endss here
