--- a/Assets/Documents/app.css
+++ b/Assets/Documents/app.css
@@ -55,7 +55,7 @@ a {
 
 .right-fst:hover {
   background: #a50f0f;
-  color: #083B2B;
+  color: #083b2b;
   border-radius: 50%;
 }
 
@@ -80,6 +80,7 @@ header {
 
 .left-logo img {
   padding-left: 100px;
+  height: 30px;
   margin-top: 15px;
 }
 
@@ -194,10 +195,9 @@ header {
 }
 
 .conainer-i-rght img {
-  width: 500px;
+  width: 300px;
   height: 300px;
   margin-top: 150px;
-  border-radius: 50%;
 }
 
 .cntnr-i-round img {
@@ -567,7 +567,7 @@ header {
   height: 40px;
   width: 130px;
   color: #fff;
-  background: #083B2B;
+  background: #083b2b;
   border: 3px solid #fff;
   border-radius: 5px;
 }
@@ -580,7 +580,7 @@ header {
   position: absolute;
   height: 300px;
   width: 70%;
-  background: #60B04A;
+  background: #60b04a;
   border-radius: 10px;
   top: 600px;
 }
@@ -639,7 +639,7 @@ header {
 }
 
 .v-ii-i {
-  color: #60B04A;
+  color: #60b04a;
   line-height: 30px;
 }
 
